--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,10 @@ spring.jpa.database-platform =org.hibernate.dialect.OracleDialect
 spring.jpa.show-sql=true
 grpc.port= 7565
 server.port=7080
-
+server.http2.enabled=true
+server.ssl.key-store=classpath:localhost-keystore.jks
+server.ssl.key-store-password=changeit
+server.ssl.key-password=changeit
+spring.main.allow-bean-definition-overriding=true
 
 
